--- a/dll/win32/browseui/lang/en-US.rc
+++ b/dll/win32/browseui/lang/en-US.rc
@@ -90,7 +90,7 @@ BEGIN
     END
     POPUP "&Help", FCIDM_MENU_HELP
     BEGIN
-        MENUITEM "&About ReactOS", IDM_HELP_ABOUT
+        MENUITEM "&About LiuNT", IDM_HELP_ABOUT
     END
 END
 
@@ -358,6 +358,6 @@ END
 
 STRINGTABLE
 BEGIN
-    IDS_PARSE_ADDR_ERR_TITLE "ReactOS Explorer"
-    IDS_PARSE_ADDR_ERR_TEXT "ReactOS Explorer cannot find '%1'. Check the spelling and try again."
+    IDS_PARSE_ADDR_ERR_TITLE "LiuNT Explorer"
+    IDS_PARSE_ADDR_ERR_TEXT "LiuNT Explorer cannot find '%1'. Check the spelling and try again."
 END
