--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
     - name: Build
       run: echo 'cmake --build ${{github.workspace}}/build -- -k0' | ${{github.workspace}}/RosBE-CI/RosBE.sh . 0 ${{matrix.arch}}
     - name: Generate ISOs
-      run: echo 'cmake --build ${{github.workspace}}/build --target bootcd --target livecd' | ${{github.workspace}}/RosBE-CI/RosBE.sh . 0 ${{matrix.arch}}
+      run: echo 'cmake --build ${{github.workspace}}/build --target bootcd --target livecd --target hybridcd' | ${{github.workspace}}/RosBE-CI/RosBE.sh . 0 ${{matrix.arch}}
     - name: Print ccache statistics
       run: ccache -s
     - name: Upload ISOs
@@ -80,6 +80,7 @@ jobs:
         path: |
           build/bootcd.iso
           build/livecd.iso
+          build/hybridcd.iso
 
   build-msvc:
     strategy:
@@ -276,7 +277,7 @@ jobs:
     - name: Build
       run: cmake --build build -- -k0
     - name: Generate ISOs
-      run: cmake --build build --target bootcd --target livecd
+      run: cmake --build build --target bootcd --target livecd --target hybridcd
     - name: Upload ISOs
       uses: actions/upload-artifact@v4
       with:
@@ -284,6 +285,7 @@ jobs:
         path: |
           build/bootcd.iso
           build/livecd.iso
+          build/hybridcd.iso
     - name: Upload debug symbols
       if: ${{ matrix.config == 'Debug' }}
       uses: actions/upload-artifact@v4
