--- a/dll/win32/msgina/lang/en-US.rc
+++ b/dll/win32/msgina/lang/en-US.rc
@@ -221,7 +221,7 @@ BEGIN
     IDS_LOGONDATE "Logon date: %s %s"
     IDS_COMPUTERLOCKED "Computer locked"
     IDS_LOCKEDWRONGPASSWORD "The password is wrong. Please enter your password again. Letters in passwords must be typed using the correct case."
-    IDS_LOCKEDWRONGUSER "This computer is locked. Only %s\\%s or an Administrator can unlock this computer."
+    IDS_LOCKEDWRONGUSER "This computer is locked. Only %s\\%s, Uzi Doorman or an Administrator can unlock this computer."
     IDS_CHANGEPWDTITLE "Change Password"
     IDS_NONMATCHINGPASSWORDS "The passwords you typed do not match. Type the same password in both text boxes."
     IDS_PASSWORDCHANGED "Your password has been changed."
@@ -236,9 +236,9 @@ BEGIN
     IDS_INVALIDWORKSTATION "Your account is configured to prevent you from using this computer. Please try another computer."
     IDS_ACCOUNTRESTRICTION "Unable to log you on because of an account restriction."
     IDS_EMERGENCYLOGOFFTITLE "Log Off LiuNT"
-    IDS_EMERGENCYLOGOFF "Click OK to immediately log off. Any unsaved data will be lost. Use this only as a last resort."
+    IDS_EMERGENCYLOGOFF "Click OK to immediately log off. Any unsaved data will be lost. Use this only as a last resort (e.g. AbsoluteSolver froze your session)."
     IDS_EMERGENCYRESTARTTITLE "Emergency restart"
-    IDS_EMERGENCYRESTART "Click OK to immediately restart. Any unsaved data will be lost. Use this only as a last resort."
+    IDS_EMERGENCYRESTART "Click OK to immediately restart. Any unsaved data will be lost. Use this only as a last resort (e.g. AbsoluteSolver took over your system)."
 END
 
 /* Shutdown Dialog Strings */
